[project]
name = "tuya-metrics-exporter"
version = "0.1.0"
description = "A production-ready Prometheus metrics exporter for Tuya smart home devices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "prometheus-client>=0.23.1",
    "tinytuya>=1.17.4",
    "uvicorn[standard]>=0.40.0",
    "pydantic",
    "asyncio>=4.0.0",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[tool.ty]
# ty configuration
# See: https://docs.astral.sh/ty/configuration/

[tool.ty.environment]
python-version = "3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["example/"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
]
ignore = ["E501", "ARG001"]  # Line length handled by ruff format

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
